<resources>
    <string name="app_name">Natasja Wezel -- pset3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu">Menu</string>
    <string name="restaurant">Restaurant</string>
    <string name="textview">TextView</string>
    <string name="your_order">Your Order</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="here_s_your_order">Here\'s your order...</string>
    <string name="this_restaurant_s_menu">This Restaurant\'s Menu</string>
    <string name="order_this_dish">Order this dish!</string>
    <string name="selected_dish">Selected Dish</string>
    <string name="price">Price:</string>
    <string name="category">Category:</string>
    <string name="description">Description:</string>
    <string name="todo">TODO</string>
</resources>
