<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="e.natasja.natasjawezel__pset3.DetailsActivity">

    <TextView
        android:id="@+id/selectedDish"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:fontFamily="cursive"
        android:text="@string/selected_dish"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceDish"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/price"
        android:textAlignment="textEnd"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageDish"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        app:srcCompat="@android:drawable/btn_star" android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/categoryDish"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/category"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/descriptionDish"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:text="@string/description"
        android:textSize="18sp" />

    <Button
        android:id="@+id/orderDish"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:fontFamily="sans-serif"
        android:onClick="ordered"
        android:text="@string/order_this_dish"
        android:textAlignment="textEnd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/menuButton"
            android:onClick="toMenu"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/orderButton"
            android:onClick="toOrder"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/your_order"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
